--- a/public/locales/gb/translation.json
+++ b/public/locales/gb/translation.json
@@ -1,3 +1,13 @@
 {
-    "appName": "Rain Memo"
+    "appName": "Rain Memo",
+    "filter": "Filter",
+    "resetFilter": "Reset filter",
+    "thisMonth": "This month",
+    "lastMonth": "Last month",
+    "thisYear": "This year",
+    "oAuthRedirecting": "Redirecting to Netatmo for authentication...",
+    "netatmoRedirecting": "Redirecting...",
+    "rain": "Rainfall: {{rain}} mm",
+    "event": "Event: {{event}}",
+    "close": "Close"
 }
