translations and events page

--- a/public/locales/gb/translation.json
+++ b/public/locales/gb/translation.json
@@ -1,5 +1,6 @@
 {
     "appName": "Rain Memo",
+    "login": "Log in/Sign up",
     "filter": "Filter",
     "resetFilter": "Reset filter",
     "thisMonth": "This month",
