translations for tables

--- a/public/locales/gb/translation.json
+++ b/public/locales/gb/translation.json
@@ -11,6 +11,9 @@
     "oAuthRedirecting": "Redirecting to Netatmo for authentication...",
     "netatmoRedirecting": "Redirecting...",
     "rain": "Rainfall: {{rain}} mm",
+    "rainfall": "Rainfall",
+    "timeOfDay": "Time of day",
+    "date": "Date",
     "event": "Event: {{event}}",
     "close": "Close"
 }
