--- a/public/locales/no/translation.json
+++ b/public/locales/no/translation.json
@@ -15,5 +15,6 @@
     "timeOfDay": "Tidspunkt",
     "date": "Dato",
     "event": "Hendelse: {{event}}",
-    "close": "Lukk"
+    "close": "Lukk",
+    "weatherAttribution": "Værdata fra MET Norge. Ikoner fra NRK/YR"
 }
